# FIT-IFJ-java

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile~  README.md  interpret
docs/: dokumentace.tex
src/: bvs.c  bvs.h  callframe.c  callframe.h  callscope.c  callscope.h  callstack.c  callstack.h  context.c  context.h  error.c  error.h  expr.h  expression.c  expression.h  ial.c  ial.h  inbuilt.c  inbuilt.h  instruction.c  instruction.h  interpret.c  interpret.h  list.c  list.h  main.c  parser.c  parser.h  precedence_table.c  precedence_table.h  rozdeleni  rozsireni  scanner.c  scanner.h  scanner_token.c  scanner_token.h  stack.c  stack.h  string.c  string.h  (+3 more)
tests/: ifj16  run.sh  test.sh
tests/testy/complex/: 10_faktorial.test  11_strings_inbuilt.output  11_strings_inbuilt.test  12_simply_print.output  12_simply_print.test  13_another_print.output  13_another_print.test  14_nula_vpremenej.test  15_return.test  16_readInt_2_8.input  16_readInt_2_8.test  17_hexadecimal.input  17_hexadecimal.output  17_hexadecimal.test  19_pretypovanie.test  1_find_string.output  1_find_string.test  20_double_correct_print.test  21_spjanie_stringov.output  21_spjanie_stringov.test  22_advance_artihmetic.test  23_SIMPLE_test1.test  24_SIMPLE_while.output  24_SIMPLE_while.test  25_SIMPLE_while.output  25_SIMPLE_while.test  26_BOOL_if.test  27_BOOLEAN_TRUE_IF.test  28_BOOLEAN_vzdy_true.test  29_konkatenace_bool_string.output  29_konkatenace_bool_string.test  2_substr.test  30_BOOLEAN_other.test  31_priority_if.test  32_others_priority.test  3_length_strin.test  (+11 more)
(+67 files in other folders)
